# iced_rhai

./: .gitignore  Cargo.toml  LICENSE  flake.nix
src/: main.rs  view.rhai
