[package]
name = "iced_rhai"
license = "mit"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_native = { git = "https://github.com/hecrj/iced.git", branch = "master" }
rhai = { git = "https://github.com/rhaiscript/rhai.git", branch = "master" }
flume = "0.10"
notify = "5.0.0-pre.10"

[package.metadata.nix]
# Toggle app flake output
app = true
# Toggle flake outputs that build (checks, package and app)
build = true
# Whether to copy built library to package output
library = false
runtimeLibs = [
    "vulkan-loader",
    "wayland",
    "wayland-protocols",
    "libxkbcommon",
    "xorg.libX11",
    "xorg.libXrandr",
    "xorg.libXi",
]